--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,7 +32,7 @@ body {
     line-height: 1;
     color: var(--e-global-color-primary);
 }
-ol, ul {
+ul {
     list-style: none;
 }
 blockquote, q {
@@ -92,7 +92,8 @@ body {
     cursor: pointer;
     font-size: 18px;
     font-weight: 500;
-    padding: 22px 30px;
+    line-height: 1.5;
+    padding: 19px 50px;
     transition: 0.2s all;
 }
 .btn-primary:hover {
@@ -105,18 +106,18 @@ body {
 .check-list li:after {
     content: '';
     position: absolute;
-    background-color: var(--e-global-color-accent);
+    background-color: #5CA0DF;
 }
 .check-list li:before {
-    left: -31px;
-    top: 12px;
+    left: 6px;
+    top: 15px;
     transform: rotate(45deg);
     height: 2px;
     width: 8px;
 }
 .check-list li:after {
-    left: -27px;
-    top: 10px;
+    left: 10px;
+    top: 13px;
     transform: rotate(-45deg);
     height: 2px;
     width: 17px;
@@ -418,7 +419,7 @@ body {
 /* winner-section */
 .winner-section {
     background-color: #F4F4F4;
-    padding: 37px 0;
+    padding: 37px 0 115px;
     text-align: center;
 }
 .winner-section .title {
@@ -448,4 +449,210 @@ body {
 }
 .winner-section .inner-holder p + p {
     margin: 10px 0 0;
+}
+
+/* img-text-section */
+.img-text-section {
+    padding: 120px 0 88px;
+}
+.img-text-section .inner-row {
+    display: flex;
+    position: relative;
+}
+.img-text-section .text-col {
+    width: 50%;
+}
+.img-text-section .text-holder {
+    padding: 62px 0 0 115px;
+}
+.img-text-section .title {
+    font-size: 32px;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0 0 20px;
+}
+.img-text-section .description {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 1.5;
+    margin: 0 0 40px;
+}
+.img-text-section .list-holder {
+    border-left: 4px solid #D4DAE2;
+    padding: 0 0 0 20px;
+    margin: 0 0 40px;
+}
+.img-text-section .list-title {
+    font-size: 20px;
+    font-weight: 700;
+    line-height: 1.3;
+    padding: 0 0 0 40px;
+    margin: 0 0 20px;
+}
+.img-text-section .list li {
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 1.5;
+    position: relative;
+    padding: 0 0 0 40px;
+    margin: 0 0 10px;
+}
+.img-text-section .list-numbered {
+    counter-reset: list-number;
+}
+.img-text-section .list-numbered li::before {
+    counter-increment: list-number;
+    content: "0" counter(list-number);
+    position: absolute;
+    left: 4px;
+    top: 0;
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+}
+.img-text-section .btn-holder {
+    display: flex;
+    justify-content: space-between;
+    margin: 62px 0 0;
+}
+.img-text-section .btn {
+    flex: 1 0 auto;
+    margin: 0 30px 0 0;
+}
+.img-text-section .btn-holder p {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.5;
+}
+.img-text-section .img-col {
+    width: 50%;
+}
+.img-text-section .img-holder {
+    position: absolute;
+    top: 0px;
+    right: -50px;
+    border-radius: 6px;
+    overflow: hidden;
+}
+.img-text-section.img-reverse .inner-row {
+    flex-direction: row-reverse;
+}
+.img-text-section.img-reverse .img-holder {
+    position: absolute;
+    top: 0px;
+    left: -50px;
+    right: auto;
+}
+.img-text-section.img-reverse .text-holder {
+    padding: 73px 90px 0 15px;
+}
+
+/* about-section */
+.about-section {
+    padding: 157px 0 70px;
+}
+.about-section .inner-row {
+    background-color: #F4F4F4;
+    border-radius: 6px;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1170px;
+    margin: 0 auto;
+}
+.about-section .text-col {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 60%;
+}
+.about-section .text-holder {
+    padding: 40px 100px;
+}
+.about-section .title {
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 1.3;
+    margin: 0 0 40px;
+}
+.about-section .text-holder p {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.5;
+    margin: 0 0 30px;
+}
+.about-section .img-col {
+    width: 40%;
+}
+.about-section .img-holder {
+    border-radius: 6px;
+    overflow: hidden;
+    position: relative;
+    max-width: 400px;
+    margin: 70px 0;
+}
+.about-section .founder-holder {
+    background-color: var(--e-global-color-accent);
+    padding: 11px 20px 11px 40px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    min-width: 210px;
+    position: absolute;
+    bottom: 50px;
+    left: 0;
+}
+.about-section .founder-holder::after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 7px;
+    bottom: 7px;
+    width: 0px;
+    height: 0px;
+    border-style: solid;
+    border-width: 0 0 15px 15px;
+    border-color: transparent transparent #6AC2F3 transparent;
+    transform: rotate(0deg);
+}
+
+/* cta-section */
+.cta-section {
+    text-align: center;
+    padding: 40px 0 122px;
+}
+.cta-section .title {
+    font-size: 44px;
+    font-weight: 700;
+    line-height: 1.5;
+    margin: 0 0 20px;
+}
+.cta-section .description {
+    font-size: 20px;
+    font-weight: 300;
+    line-height: 1.5;
+    margin: 0 0 32px;
+}
+.cta-section .btn-holder {
+    margin: 0 0 15px;
+}
+.cta-section .btn {
+    display: inline-block;
+}
+.cta-section .text {
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.5;
+    max-width: 370px;
+    margin: 0 auto;
+}
+
+/* footer */
+.footer {
+    border-top: 1px solid #D4DAE2;
+    text-align: center;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 1.5;
+    padding: 40px 0 58px;
 }
