--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,6 +194,7 @@ body {
 }
 .hero .form-inner {
     padding: 47px 48px;
+    box-shadow: #0000001A 0px 10px 20px 0px;
 }
 .hero .form-title {
     font-size: 30px;
@@ -282,12 +283,13 @@ body {
 /* review-section */
 .review-section {
     border-top: 1px solid #D4DAE2;
-    padding: 75px 0 110px;
+    padding: 67px 0 110px;
 }
 .review-section .title {
     font-size: 40px;
     font-weight: 700;
-    margin: 0 0 25px;
+    line-height: 1.4;
+    margin: 0 0 15px;
     text-align: center;
 }
 .review-slider {
@@ -331,6 +333,7 @@ body {
 .review-slider .slide-item-img {
     background-color: #F4F4F4;
     border-radius: 50%;
+    flex: 0 0 auto;
     height: 60px;
     width: 60px;
 }
@@ -384,6 +387,7 @@ body {
 .why-section .title {
     font-size: 40px;
     font-weight: 700;
+    line-height: 1.4;
     margin: 0 0 84px;
     text-align: center;
 }
@@ -416,6 +420,7 @@ body {
 .why-section .item-title {
     font-size: 18px;
     font-weight: 700;
+    line-height: 1.3;
     margin: 0 0 20px;
 }
 .why-section .item-description {
@@ -683,16 +688,57 @@ body {
         padding: 115px 0 70px;
     }
 }
+@media (max-width: 1399px) {
+    .img-text-section .text-holder {
+        padding: 62px 15px 0 15px;
+    }
+    .img-text-section.img-reverse .text-holder {
+        padding: 73px 15px 0 15px;
+    }
+    .img-text-section .img-col {
+        display: flex;
+        align-items: center;
+    }
+}
+@media (max-width: 1199px) {
+    .img-text-section .text-holder,
+    .img-text-section.img-reverse .text-holder {
+        padding: 0 15px;
+    }
+    .img-text-section .btn-holder {
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    .img-text-section .btn {
+        text-align: center;
+        margin: 0 0 30px;
+    }
+    .img-text-section .btn-holder p {
+        width: 100%;
+    }
+}
 @media (max-width: 991px) {
     .hero {
+        background-image: none;
+        padding: 0;
+    }
+    .hero .container {
+        padding: 0;
+    } 
+    .hero .hero-row {
+        padding: 0;
+    }
+    .hero .text-col {
         background-image: url('../images/hero-mob.jpg');
-        padding: 50px 0 0;
+        background-size: cover;
+        padding: 50px 20px 218px;
     }
     .hero .text-col, .hero .form-col {
         width: 100%;
     }
     .hero .form-col {
         justify-content: center;
+        margin-top: -188px;
     }
     .hero .text-row {
         padding: 0;
@@ -710,13 +756,146 @@ body {
         max-width: 350px;
         margin: 0 auto;
     }
-
-
-
+    .hero .form-holder {
+        margin: 0 20px 0;
+    }
+    .trusted-section .trusted-slider {
+        margin: 0;
+    }
     .review-slider {
         padding: 0 50px;
     }
+    .review-section .title,
+    .why-section .title,
+    .winner-section .title {
+        font-size: 32px;
+    }
+    .why-section {
+        padding: 65px 0 50px;
+    }
+    .why-section .title {
+        margin: 0 0 50px;
+    }
+    .why-section .item {
+        padding: 28px 25px 40px;
+    }
+    .why-section .icon-holder,
+    .why-section .text-holder {
+        width: 100%;
+    }
+    .why-section .item-inner {
+        text-align: center;
+    }
+    .winner-section {
+        padding: 37px 0 87px;
+    }
+    .img-text-section {
+        padding: 87px 0 0px;
+    }
+    .img-text-section .inner-row,
+    .img-text-section.img-reverse .inner-row {
+        flex-wrap: wrap;
+        flex-direction: column-reverse;
+    }
+    .img-text-section .text-col,
+    .img-text-section .img-col {
+        width: 100%;
+    }
+    .img-text-section .text-col {
+        margin: 30px 0 0;
+    }
+    .img-text-section .img-col {
+        justify-content: center;
+    }
 }
 @media (max-width: 767px) {
-
+    .btn-primary {
+        padding: 19px 20px;
+    }
+    .logo-wrap {
+        max-width: 158px;
+    }
+    .hero .text-col {
+        padding-top: 30px;
+    }
+    .hero .title {
+        font-size: 28px;
+        margin: 30px 0 14px;
+    }
+    .hero .text-col .description {
+        font-size: 16px;
+        margin: 0 0 30px;
+    }
+    .hero-list li {
+        font-size: 14px;
+    }
+    .hero .form-inner {
+        padding: 38px 30px;
+    }
+    .hero .form-title {
+        font-size: 22px;
+        margin: 0 0 20px;
+    }
+    .hero .form-holder .description {
+        font-size: 14px;
+        margin: 0 auto 23px;
+    }
+    .trusted-section {
+        text-align: center;
+        padding: 35px 0 15px;
+    }
+    .review-section {
+        padding: 75px 0 37px;
+    }
+    .review-section .title,
+    .why-section .title,
+    .winner-section .title {
+        font-size: 22px;
+    }
+    .review-section .title {
+        margin: 0;
+    }
+    .review-slider {
+        padding: 0;
+        margin-left: -15px;
+        margin-right: -15px;
+    }
+    .review-slider .slick-list {
+        padding: 20px 0 38px;
+    }
+    .review-slider .text {
+        font-size: 16px;
+    }
+    .review-slider .reviewer {
+        font-size: 14px;
+    }
+    .why-section {
+        padding: 47px 0 5px;
+    }
+    .why-section .title {
+        margin: 0 0 30px;
+    }
+    .why-section .item-row {
+        grid-template-columns: 1fr;
+        grid-row-gap: 20px;
+    }
+    .why-section .text-holder {
+        padding: 17px 0 0;
+    }
+    .why-section .item-title {
+        margin: 0 0 14px;
+    }
+    .winner-section {
+        padding: 37px 0 45px;
+    }
+    .winner-section .title {
+        margin: 0 0 35px;
+    }
+    .winner-section .inner-holder {
+        font-size: 14px;
+    }
+    .winner-section .text-holder {
+        padding: 19px 20px 21px;
+        margin-top: -2px;
+    }
 }
