--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -601,7 +601,7 @@ body {
     overflow: hidden;
     position: relative;
     max-width: 400px;
-    margin: 70px 0;
+    margin: 70px 20px 70px 0;
 }
 .about-section .founder-holder {
     background-color: var(--e-global-color-accent);
@@ -807,6 +807,16 @@ body {
     .img-text-section .img-col {
         justify-content: center;
     }
+    .about-section {
+        padding: 87px 0 70px;
+    }
+    .about-section .text-holder {
+        padding: 40px;
+    }
+    .about-section .title,
+    .cta-section .title {
+        font-size: 36px;
+    }
 }
 @media (max-width: 767px) {
     .btn-primary {
@@ -897,5 +907,88 @@ body {
     .winner-section .text-holder {
         padding: 19px 20px 21px;
         margin-top: -2px;
+    }
+    .img-text-section {
+        padding: 45px 0 0px;
+    }
+    .img-text-section .text-col {
+        margin: 25px 0 0;
+    }
+    .img-text-section .title {
+        font-size: 22px;
+        margin: 0 0 12px;
+    }
+    .img-text-section .text-holder,
+    .img-text-section.img-reverse .text-holder {
+        padding: 0;
+    }
+    .img-text-section .description {
+        margin: 0 0 30px;
+    }
+    .img-text-section .list-holder {
+        padding: 0 0 0 5px;
+        margin: 0 0 30px;
+    }
+    .img-text-section .list-title {
+        font-size: 18px;
+        padding: 0 0 0 33px;
+        margin: 0 0 15px;
+    }
+    .img-text-section .list li {
+        font-size: 14px;
+        padding: 0 0 0 33px;
+    }
+    .img-text-section .btn-holder {
+        margin: 30px 15px 0;
+    }
+    .img-text-section .btn {
+        margin: 0 0 15px;
+    }
+    .about-section {
+        background-color: #F4F4F4;
+        padding: 40px 0 50px;
+        margin: 50px 0 0;
+    }
+    .about-section .inner-row {
+        background-color: transparent;
+    }
+    .about-section .text-col,
+    .about-section .img-col {
+        width: 100%;
+    }
+    .about-section .text-holder {
+        padding: 0;
+    }
+    .about-section .title {
+        font-size: 30px;
+        margin: 0 0 23px;
+    }
+    .about-section .text-holder p {
+        font-size: 16px;
+        margin: 0 0 25px;
+    }
+    .about-section .img-holder {
+        margin: 20px auto 0;
+    }
+    .cta-section {
+       padding: 40px 0 40px; 
+    }
+    .cta-section .title {
+        font-size: 30px;
+        line-height: 1.3;
+        margin: 0 0 15px;
+    }
+    .cta-section .description {
+        font-size: 16px;
+        margin: 0 0 20px;
+    }
+    .cta-section .btn-holder {
+        margin: 0 15px 15px;
+    }
+    .cta-section .btn {
+        display: block;
+    }
+    .footer {
+        padding: 25px 0;
     }
 }
