--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1148,11 +1148,29 @@ body {
     }
     .p-3a .hero .form-title {
         font-size: 22px;
+        line-height: 1.3;
+        margin: 0 0 30px;
+    }
+    .p-3a .hero .form-group label {
+        padding: 8px 18px;
+    }
+    .p-3a .why-section {
+        padding: 28px 0 50px;
     }
     .p-3a .why-section .title {
         font-size: 22px;
+        margin: 0 0 32px;
     }
     .p-3a .winner-section .title {
         margin: 0 0 35px;
+    }
+    .p-3a .review-section {
+        padding: 35px 0 15px;
+    }
+    .p-3a .img-text-section {
+        padding: 50px 0 0;
+    }
+    .p-3a .about-section {
+        padding: 40px 0 50px;
     }
 }
