--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -239,3 +239,83 @@
         margin: 80px 0 0;
     }
 }
+
+
+
+/* modal */
+.modal {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+}
+.modal.is-visible {
+    visibility: visible;
+}
+.modal-overlay {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(8, 23, 46, 0.85);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.3s, opacity 0.3s;
+}
+.modal.is-visible .modal-overlay {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+}
+.modal-wrapper {
+    position: absolute;
+    z-index: 9999;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    max-width: 690px;
+    height: max-content;
+    margin: auto;
+    background-color: #fff;
+    box-shadow: 0 0 1.5em hsla(0, 0%, 0%, 0.35);
+    padding: 50px 20px;
+    border-radius: 5px;
+}
+.modal-transition {
+    transition: all 0.3s 0.12s;
+    transform: translateY(-10%);
+    opacity: 0;
+}
+.modal.is-visible .modal-transition {
+    transform: translateY(0);
+    opacity: 1;
+}
+.modal-form {
+    max-width: 380px;
+    margin: 0 auto;
+    text-align: center;
+}
+.modal-title {
+    font-size: 30px;
+    margin: 0 0 15px;
+}
+.modal-subtitle {
+    font-size: 18px;
+    font-weight: 300;
+    margin: 0 0 15px;
+}
+.modal-close {
+    position: absolute;
+    cursor: pointer;
+    top: 16px;
+    right: 16px;
+    padding: 1em;
+    background: none;
+    border: 0;
+}
