--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,6 +211,7 @@ body {
     margin: 0 auto 30px;
 }
 .form-holder .form-group {
+    position: relative;
     display: flex;
     margin: 0 0 17px;
 }
@@ -231,10 +232,16 @@ body {
     background-repeat: no-repeat;
     background-position-x: 94%;
     background-position-y: 23px;
+    font-family: 'Metronic Pro', Sans-serif;
 }
 .form-holder .form-control::placeholder {
     color: rgba(0, 0, 0, 0.7);
     font-size: 15px;
+}
+.form-holder select.form-control:disabled {
+    padding: 18px 15px 18px 55px;
+    background-color: #F4F4F4;
+    color: rgba(0, 0, 0, 0.4);
 }
 .form-holder .btn-wrap {
     margin: 22px 0 0;
@@ -242,7 +249,13 @@ body {
 .form-holder .btn {
     width: 100%;
 }
-
+.form-group .icon-place {
+    position: absolute;
+    z-index: 1;
+    top: 10px;
+    left: 38px;
+    width: 32px;
+}
 /* partnerships-section */
 .trusted-section {
     text-align: center;
@@ -1172,5 +1185,352 @@ body {
     }
     .p-3a .about-section {
         padding: 40px 0 50px;
+    }
+}
+
+/* form page */
+.form-step .hero {
+    background-color: #08172E;
+    background-image: none;
+    color: #fff;
+    text-align: center;
+    padding: 65px 0 57px;
+}
+.form-step .logo-wrap {
+    margin: 0 auto 70px;
+}
+.form-step .title {
+    margin: 0 0 32px;
+    font-size: 32px;
+}
+.form-step .subtitle {
+    margin: 0 0 30px;
+    font-size: 22px;
+    font-weight: 300;
+    line-height: 1.5;
+}
+.form-step .form-section {
+    padding: 75px 0 130px;
+}
+.form-step .form {
+    max-width: 970px;
+    margin: 0 auto;
+}
+.form-step .form-article {
+    display: flex;
+    justify-content: space-between;
+}
+.form-article + .form-article {
+    margin: 75px 0 0;
+}
+.form-step .form-row {
+    width: 100%;
+    max-width: 570px;
+}
+.form-step .form-title {
+    font-size: 20px;
+    font-weight: 600;
+    min-width: 30%;
+}
+.form-step .form-row .form-title {
+    margin: 0 0 28px;
+    font-size: 18px;
+    line-height: 1.2;
+}
+.form-step .form-row .form-group {
+    display: flex;
+    flex-direction: column;
+}
+.form-step .form-row .form-group + .form-group {
+    margin: 19px 0 0;
+}
+.form-step .form-row .label {
+    font-size: 15px;
+    line-height: 1.6;
+    margin: 0 0 6px;
+}
+.form-step .form-row .form-group input,
+.form-step .form-row .form-group textarea {
+    font-size: 15px;
+    border: 1px solid #D4DAE2;
+    border-radius: 2px;
+    padding: 18px 19px;
+    font-family: 'Metronic Pro', Sans-serif;
+    outline: none;
+}
+.form-step .form-row .form-group input::placeholder,
+.form-step .form-row .form-group textarea::placeholder {
+    color: rgba(0, 0, 0, 0.2);
+}
+.form-step .form-row .form-group textarea {
+    max-height: 112px;
+}
+.form-step .custom-w {
+    max-width: 300px;
+}
+/* custom checkbox */
+.form-step .checkbox-list {
+    margin: 17px 0 9px;
+}
+.form-step .checkbox-group {
+    margin: 0 0 10px;
+}
+.form-step .checkbox-group input {
+    padding: 0;
+    height: initial;
+    width: initial;
+    margin-bottom: 0;
+    display: none;
+    cursor: pointer;
+}
+.form-step .checkbox-group label {
+    position: relative;
+    cursor: pointer;
+    font-size: 15px;
+}
+.form-step .checkbox-group label:before {
+    content:'';
+    -webkit-appearance: none;
+    background-color: transparent;
+    border: 1px solid #D4DAE2;
+    border-radius: 2px;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05);
+    padding: 11px;
+    display: inline-block;
+    position: relative;
+    vertical-align: middle;
+    cursor: pointer;
+    margin-right: 10px;
+}
+.checkbox-group input:checked + label:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: -2px;
+    left: 9px;
+    width: 6px;
+    height: 14px;
+    border: solid #0079bf;
+    border-width: 0 2px 2px 0;
+    transform: rotate(45deg);
+}
+
+/* upload button */
+.form-step .file-drop-area {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    font-size: 15px;
+    max-width: 100%;
+    padding: 22px 0;
+    border: 1px dashed #D4DAE2;
+    border-radius: 3px;
+    transition: 0.2s;
+}
+.form-step .file-drop-area .is-active {
+    background-color: rgba(255, 255, 255, 0.05);
+}
+.form-step .upload-ico {
+    width: 100%;
+    max-width: 50px;
+    max-height: 50px;
+    margin: 0 0 9px;
+}
+.form-step .fake-btn {
+    /* flex-shrink: 0;
+    text-transform: uppercase; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 0 8px;
+}
+.form-step .file-msg {
+    font-size: 15px;
+    color: rgba(0, 0, 0, 0.2);
+    line-height: 1.4;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.form-step .form-row .form-group .file-input {
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    cursor: pointer;
+    opacity: 0;
+    padding: 0;
+}
+.form-step .file-input:focus {
+    outline: none;
+}
+.form-step .btn {
+    font-family: 'Metronic Pro', Sans-serif;
+    font-size: 18px;
+    font-weight: 600;
+    padding: 19px 15px;
+    margin: 32px 0 0;
+}
+
+@media (max-width: 767px) {
+    .hidden-mob {
+        display: none;
+    }
+    .form-step .hero {
+        padding: 28px 0 28px;
+    }
+    .form-step .logo-wrap {
+        margin: 0 auto 27px;
+    }
+    .form-step .title {
+        margin: 0 0 15px;
+        font-size: 28px;
+    }
+    .form-step .subtitle {
+        margin: 0 0 18px;
+        font-size: 18px;
+    }
+    .form-step .form-section {
+        padding: 45px 0 10px;
+    }
+    .form-step .form-article {
+        flex-wrap: wrap;
+    }
+    .form-step .form-row {
+        max-width: 100%;
+    }
+    .form-step .custom-w {
+        max-width: 100%;
+    }
+    .form-step .form-row .label {
+        font-size: 14px;
+        margin: 0 0 7px;
+    }
+    .form-step .form-row .form-group input,
+    .form-step .form-row .form-group textarea {
+        font-size: 14px;
+        padding: 19px 19px;
+    }
+    .form-step .form-title {
+        width: 100%;
+        margin: 0 0 35px;
+    }
+    .form-article + .form-article {
+        margin: 54px 0 0;
+    }
+    .form-step .checkbox-group label {
+        font-size: 14px;
+    }
+    .form-step .checkbox-list {
+        margin: 17px 0 0px;
+    }
+    .form-step .btn {
+        margin: 80px 0 0;
+    }
+}
+
+/* modal */
+.modal {
+    position: fixed;
+    z-index: 10000;
+    top: 0;
+    left: 0;
+    visibility: hidden;
+    width: 100%;
+    height: 100%;
+}
+.modal.is-visible {
+    visibility: visible;
+}
+.modal-overlay {
+    position: fixed;
+    z-index: 10;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(8, 23, 46, 0.85);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 0s linear 0.3s, opacity 0.3s;
+}
+.modal.is-visible .modal-overlay {
+    opacity: 1;
+    visibility: visible;
+    transition-delay: 0s;
+}
+.modal-wrapper {
+    position: absolute;
+    z-index: 9999;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    max-width: 690px;
+    height: max-content;
+    margin: auto;
+    background-color: #fff;
+    box-shadow: 0 0 1.5em hsla(0, 0%, 0%, 0.35);
+    padding: 96px 20px 60px;
+    border-radius: 5px;
+}
+.modal-transition {
+    transition: all 0.3s 0.12s;
+    transform: translateY(-10%);
+    opacity: 0;
+}
+.modal.is-visible .modal-transition {
+    transform: translateY(0);
+    opacity: 1;
+}
+.modal-form {
+    max-width: 425px;
+    margin: 0 auto;
+    text-align: center;
+}
+.modal-title {
+    font-size: 30px;
+    font-weight: 700;
+    margin: 0 0 25px;
+}
+.modal-subtitle {
+    font-size: 18px;
+    font-weight: 300;
+    line-height: 1.4;
+    margin: 0 0 15px;
+}
+.modal-close {
+    position: absolute;
+    cursor: pointer;
+    top: 16px;
+    right: 16px;
+    padding: 1em;
+    background: none;
+    border: 0;
+    transition: all 0.25s;
+}
+.modal-close:hover {
+    transform: rotate(90deg);
+}
+.modal-form .form-group {
+    padding: 0 22px;
+}
+.modal-form .btn {
+    margin: 0;
+}
+
+@media (max-width: 767px) {
+    .modal-title {
+        font-size: 22px;
+        margin: 0 0 14px;
+    }
+    .modal-subtitle {
+        font-size: 16px;
+    }
+    .modal-close .icon-close {
+        width: 32px;
+        height: 32px;
     }
 }
