--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -234,6 +234,23 @@ body {
     background-position-y: 23px;
     font-family: 'Metronic Pro', Sans-serif;
 }
+/*  */
+.form-holder select.form-control .option {
+    background-repeat: no-repeat;
+    background-position: 0 50%;
+}
+.selected-image {
+    z-index: 1;
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 46px;
+    max-height: 46px;
+    background-repeat: no-repeat;
+    top: calc(50% - 23px);
+}
+
 .form-holder .form-control::placeholder {
     color: rgba(0, 0, 0, 0.7);
     font-size: 15px;
@@ -244,6 +261,7 @@ body {
     color: rgba(0, 0, 0, 0.4);
 }
 .form-holder .btn-wrap {
+    text-align: center;
     margin: 22px 0 0;
 }
 .form-holder .btn {
@@ -1534,3 +1552,24 @@ body {
         height: 32px;
     }
 }
+
+/* select */
+.select2-container--default {
+
+}
+.select2-selection--single {
+border-color: #fff;
+height: 60px;
+padding: 7.5px 0;
+border-radius: 0;
+
+}
+.select2-selection__arrow {
+height: 58px;
+}
+.select2-dropdown {
+border-radius: 0;
+box-shadow: #444 0px 3px 5px;
+border: 0;
+}
+  
